# OpenThinning

./: CMakeLists.txt  License.txt  README.md  Readme.txt
Source/: LookupTable.cpp  LookupTable.h  Volume.cpp  Volume.h  VolumeData.h  main.cpp
